--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
+body {
+  background-color: #effffd;
+}
 .wrapper {
   display: grid;
   grid-template-columns: 50% 30%;
-  margin-left: 250px;
+  margin-left: 255px;
   grid-gap: 2em;
 }
 * {
@@ -24,6 +27,7 @@
   line-height: 100px;
 }
 .sidebar ul a {
+  font-family: "Open Sans", sans-serif;
   display: block;
   height: 100%;
   width: 100%;
@@ -32,4 +36,94 @@
   color: white;
   padding-left: 20px;
   box-sizing: border-box;
+}
+.top {
+  margin-top: 10px;
+  margin-left: 15px;
+  display: grid;
+  grid-template-columns: 0.1fr 0.1fr 1fr 55% 50%;
+  grid-gap: 2em;
+}
+.top select {
+  margin-left: 1em;
+  width: 100%;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
+  background-image: none;
+}
+.select {
+  border: #290255;
+  border-style: solid;
+  border-width: 0.05em;
+  position: relative;
+  display: flex;
+  width: 15em;
+  height: 3em;
+  line-height: 3;
+  overflow: hidden;
+  background-color: #faf6f6;
+  border-radius: 0.25em;
+}
+select::-ms-expand {
+  display: none;
+}
+.select::after {
+  content: "\25BC";
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0 1em;
+  background: #faf6f6;
+  cursor: pointer;
+  pointer-events: none;
+  transition: 150ms all ease;
+}
+.select:hover::after {
+  color: white;
+  background-color: #8c3de7;
+}
+p {
+  font-family: "Open Sans", sans-serif;
+}
+
+.btn {
+  border: 1px solid #3498db;
+  background: none;
+  padding: 10px 20px;
+  font-size: 20px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  cursor: pointer;
+  margin: 10px;
+  transition: 0.8s;
+  position: relative;
+  overflow: hidden;
+}
+.btn1 {
+  color: #faf6f6;
+}
+.btn1:hover {
+  color: #8c3de7;
+}
+.btn::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  background-color: #8c3de7;
+  z-index: -1;
+  transition: 0.8s;
+}
+.btn1::before {
+  top: 0;
+  border-radius: 0 0 50% 50%;
+  height: 180%;
+}
+.btn1:hover::before {
+  height: 0%;
 }
