--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body {
   margin-top: 10px;
   margin-left: 15px;
   display: grid;
-  grid-template-columns: 0.1fr 0.1fr 1fr 55% 50%;
+  grid-template-columns: 0.1fr 0.1fr 1fr 55% 100%;
   grid-gap: 2em;
 }
 .top select {
@@ -89,6 +89,7 @@ select::-ms-expand {
 }
 p {
   font-family: "Open Sans", sans-serif;
+  font-size: 20px;
 }
 
 .btn {
@@ -103,10 +104,12 @@ p {
   position: relative;
   overflow: hidden;
 }
-.btn1 {
+.btn1,
+.btn2 {
   color: #faf6f6;
 }
-.btn1:hover {
+.btn1:hover,
+.btn2:hover {
   color: #8c3de7;
 }
 .btn::before {
@@ -119,11 +122,14 @@ p {
   z-index: -1;
   transition: 0.8s;
 }
-.btn1::before {
+.btn1::before,.btn2::before {
   top: 0;
   border-radius: 0 0 50% 50%;
   height: 180%;
 }
-.btn1:hover::before {
+.btn1:hover::before,.btn2:hover::before {
   height: 0%;
+}
+.btn2{
+  border-radius:100%;
 }
